test_programs/compile_failure/comptime_return_minus_one_as_i32/src/main.nr
fn main() -> pub i32 {
    comptime {
        -1
    }
}
